# python-flow-hub

./: .env.example  .gitignore  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  db.py  errors.py  main.py
deploy/cloudbuild/: runner-deps.yaml
deploy/iam/: setup.md
deploy/k8s/: namespace.yaml
frontend/: .env.production  Dockerfile  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
pyflow_runtime/: __init__.py  backoff_queue.py  condition_engine.py  consumer.py  executor.py  flow_dag.py  idempotency.py  input_mapper.py  pyproject.toml  reply_builder.py  sandbox_config.py  tracing.py
runner/: Dockerfile  Dockerfile.deps  Dockerfile.gpu  entrypoint.py
sample-projects/data-toolkit/: data_cleaner.py  pack.py  report_generator.py  stats_engine.py  text_processor.py
sample-projects/vector-ingest/pyflow_vector/: pyproject.toml
sample-projects/vector-ingest/pyflow_vector/src/pyflow_vector/: __init__.py  embedder.py  image_loader.py  milvus_store.py
scripts/: test_block_and_flow_run.py  test_health.py
tests/: conftest.py  test_backoff_queue.py  test_condition_engine.py  test_consumer.py  test_entrypoints.py  test_flow_runner_resume.py  test_idempotency.py  test_image_builder.py  test_manifest_generator.py  test_middleware_env.py  test_reply_builder.py  test_requirements_policy.py  test_versioning.py  test_zip_import_requirements.py
(+151 files in other folders)
