[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflow-runtime"
version = "0.1.0"
description = "PyFlowHub execution-side shared library (idempotency / condition / reply / sandbox)"
requires-python = ">=3.11"
dependencies = [
    "jmespath==1.0.1",
    "jsonpath-ng==1.6.1",
    "aio-pika==9.4.3",
    "redis==5.0.8",
]

[tool.setuptools]
packages = ["pyflow_runtime"]
package-dir = { "pyflow_runtime" = "." }
